--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "react-scripts build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -20,7 +20,6 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "^5.0.1",
     "react-timer-hook": "^3.0.8",
     "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
